--- a/assets/stylus/widgets/widgets.styl
+++ b/assets/stylus/widgets/widgets.styl
@@ -204,6 +204,7 @@ widget-overlay-base()
     width 100%
     height 100%
     background rgba(255,255,255, 0.5)
+    -webkit-backdrop-filter: blur(5px)
     backdrop-filter: blur(5px)
     z-index 9999
     align-items center
@@ -227,6 +228,7 @@ widget-overlay-base()
         justify-content flex-end
         align-items: flex-end
         background rgba(255,255,255, 0)
+        -webkit-backdrop-filter: blur(0)
         backdrop-filter: blur(0)
 
     +media(desktop)
